--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         </section>
     </main>
     <footer>
+        <img src="/assets/footer.svg" alt="rodapé">
     </footer>
 </body>
 </html>
