--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </header>
     <main>
         <section class="section-1">
-            <img src="/assets/Section Image." alt="imagem 1" class="image-1">
+            <img src="/assets/Section Image.png" alt="imagem 1" class="image-1">
             <div class="text">
                 <h2>Crie um espaço controlado por convite onde você se sinta em casa</h2>
                 <p>Os servidores Discord são organizados em canais com assuntos para vocês colaborarem, compartilharem ou simplesmente falarem do dia sem entupir um chat geral.</p>
